# epicenter

./: .gitignore  AGENTS.md  FINANCIAL_SUSTAINABILITY.md  LICENSE  README.md  bunfig.toml  jsrepo.config.ts  package.json  skills-lock.json
.changeset/: config.json  quiet-timers-reflect.md
.claude/commands/: actors.md  workers.md
.claude/skills/: comparable-apps  source-of-truth
.github/workflows/: README.md  ci.autofix.yml  ci.format.yml  deploy.cloudflare-preview.yml  deploy.cloudflare.yml  meta.update-readme-version.yml  pr-preview.whispering.yml  release.whispering.yml
.sisyphus/prompts/: 01-discord-reply-enrico-wellcrafted.md  02-fix-escaped-unicode-in-ui.md  03-write-sync-testing-guide.md  04-devprod-db-separation-issue.md
apps/: README.md
apps/api/: CHANGELOG.md  README.md  autumn.config.ts  dev-auth.ts  drizzle.config.ts  package.json  server.dev.ts  server.ts  worker-configuration.d.ts  wrangler.jsonc
apps/dashboard/: README.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/fuji/: CHANGELOG.md  README.md  architecture.test.ts  browser.ts  daemon.ts  fuji.browser.ts  fuji.test.ts  fuji.workspace.ts  package.json  project.ts  tsconfig.json  vite.config.ts  workspace.test.ts  workspace.ts  wrangler.jsonc
apps/fuji/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/fuji/src-tauri/capabilities/: default.json
apps/fuji/src-tauri/src/: lib.rs  main.rs  markdown.rs
apps/honeycrisp/: CHANGELOG.md  README.md  browser.ts  daemon.ts  honeycrisp.browser.ts  honeycrisp.test.ts  honeycrisp.ts  package.json  project.ts  vite.config.ts  workspace.test.ts  workspace.ts  wrangler.jsonc
apps/landing/: CHANGELOG.md  astro.config.mjs  package.json  wrangler.jsonc
apps/local-books/: AGENTS.md  README.md  books.ts  mount.ts  package.json  tsconfig.json
apps/matter/: CHANGELOG.md  README.md  package.json  vite.config.ts
apps/opensidian/: CHANGELOG.md  README.md  daemon.ts  opensidian.browser.actions.ts  opensidian.browser.ts  opensidian.ts  package.json  project.ts  vite.config.ts  workspace.ts  wrangler.jsonc
apps/reddit/: CHANGELOG.md  package.json
apps/self-host/: AGENTS.md  CHANGELOG.md  README.md  instance-token.test.ts  instance-token.ts  package.json  server.ts
apps/skills/: README.md  vite.config.ts
apps/tab-manager/: CHANGELOG.md  README.md  package.json  project.ts
apps/todos/: package.json  svelte.config.js  todos.browser.ts  todos.test.ts  todos.ts  tsconfig.json  vite.config.ts
apps/vocab/: CHANGELOG.md  LICENSE  README.md  epicenter-engine.ts  epicenter.config.ts  mount.ts  package.json  svelte.config.js  vite.config.ts  vocab.browser.ts  vocab.ts  wrangler.jsonc
apps/whispering/: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  SKILL.md  (+3 more)
apps/whispering/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json  tauri.dev.macos.conf.json
apps/whispering/src-tauri/capabilities/: default.json
apps/whispering/src-tauri/scripts/: README.md  dev-codesign-runner.sh
apps/whispering/src-tauri/src/: clipboard.rs  command.rs  download.rs  keyring_storage.rs  lib.rs  markdown.rs  media.rs  overlay.rs  timing.rs
apps/whispering/src-tauri/src/audio/: command.rs  decode.rs  encode.rs  error.rs
apps/whispering/src-tauri/src/keyboard/: commands.rs  event.rs  keys.rs  mac_tap.rs  matcher.rs  mod.rs  supervisor.rs
apps/whispering/src-tauri/src/media/: linux.rs  macos.rs  windows.rs
apps/whispering/src-tauri/src/media/macos/: audio.rs
apps/whispering/src-tauri/src/recorder/: artifact.rs  commands.rs  error.rs  mod.rs  recorder.rs
apps/whispering/src-tauri/src/transcription/: config.rs  error.rs  events.rs  mod.rs  model_cache.rs  model_folder.rs  model_import.rs  model_manager.rs
apps/whispering/src-tauri/tests/: bench_recorder_shapes.rs  decode_fixtures.rs
docs/: CONTEXT.md  architecture.md  cli-vs-scripts.md  encryption.md  positioning.md  scripting.md  spec-history.md  trust-model.md
scripts/: check-catalog-pins.ts  claude-consult.test.ts  claude-consult.ts  clean.ts  publish-packages.ts
specs/: 20260224T141400-local-server-plugin-architecture.md  20260310T235239-sync-status-102.md  20260312T210000-whispering-settings-separation.md  20260315T070000-query-layer-switch-to-workspace-tables.md  20260315T210229-clean-up-dead-rpc-db-code.md  20260318T234754-rename-svelte-package-and-add-fromKv.md  20260319T002657-rewrite-how-to-monetize.md  20260320T120000-readme-refresh.md  20260321T082150-fix-stuck-tool-approval.md  20260331T120000-skills-editor-domain-migration.md  20260402T120000-extract-encryption-runtime.md  20260402T120000-workspace-rpc.md  20260402T170000-typed-user-key-store.md  20260405T160000-billing-dashboard-redesign.md  20260407T165605-structured-ai-chat-errors.md  20260413T120000-server-authoritative-apps-wager-social.handoff.md  20260413T120000-server-authoritative-apps-wager-social.md  20260415T130224-extension-action-introspection-handoff.md  20260415T130224-extension-action-introspection.md  20260419T150000-document-primitive-redesign.md  20260420T230200-workspace-as-definedocument.md  20260420T234500-consumer-migration-to-defineworkspace.md  20260421T155436-cli-scripting-first-redesign.md  20260422T222216-workspace-logger.md  20260424T180000-drop-document-factory-attach-everything.md  20260425T000000-device-actions-via-awareness.md  20260427T010000-supervisor-redesign.md  20260427T020000-supervisor-redesign-step-1-abortsignal.md  20260427T120000-workspace-sync-failed-phase.md  20260428T-script-first-cli-collapse.md  20260429T004302-workspace-as-daemon-transport.md  20260429T120000-remote-workspace-is-the-action-tree.md  20260429T230000-sync-as-peer-transport.md  20260429T235500-daemon-as-materializer-worker.md  20260501T114356-daemon-startup-boundary-and-route-definition-cleanup.md  20260501T120000-daemon-peer-runtime-contract.md  20260502T233446-sync-token-source-and-disposable-child-docs.md  20260506T010807-signed-in-owns-the-workspace.md  20260506T123741-from-table-readonly-view-redesign.md  20260507T013000-honeycrisp-state-namespace-clean-break.md  (+85 more)
(+1094 files in other folders)
