[package]
name = "whispering"
version = "7.11.0"
description = "A Tauri App"
authors = ["you"]
repository = "https://github.com/EpicenterHQ/epicenter"
edition = "2021"

[package.metadata]
# Set minimum macOS version for C++17 filesystem support
cargo-target-macos-version = "10.15"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whispering_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy_macro = "0.15"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# Typed Rust to TypeScript IPC bindings. Pinned to the v2 RC line that this
# spec targeted (20260526T220000-tauri-specta-on-artifact-id-base.md).
specta = "=2.0.0-rc.25"
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-aptabase = "1"
enigo = "0.5.0"
cpal = "0.16.0"
tracing = "0.1.41"
thiserror = "2.0.12"
hound = "3.5"
lazy_static = "1.4"
tempfile = "3.8"
rubato = "0.15"
# Container demux + non-Opus decode. Default features already cover the
# common formats (WAV, FLAC, OGG, MKV/WebM, Vorbis, PCM, ADPCM); the extras
# below add MP3, AAC, and ISO MP4 for the file-upload path and Safari's
# MediaRecorder output. We do NOT enable Symphonia's incomplete `opus`
# feature; Opus packets are decoded by libopus via `audiopus` instead.
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }
# libopus FFI. Decoder runs on the input path (Opus inside WebM/OGG/MP4);
# encoder runs on the cloud-upload path to compress cpal WAV ~20x. Vendored
# libopus is built by audiopus_sys (requires CMake + libclang on the build
# host).
audiopus = "0.3.0-rc.0"
# Pure-Rust OGG muxer. Wraps libopus-encoded packets into a `.ogg` file the
# cloud transcription providers accept directly.
ogg = "0.9"
tauri-plugin-macos-permissions = "2.3.0"
rayon = "1.10"
log = "0.4"
tauri-plugin-log = "2"

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "=0.3.8", features = ["whisper-vulkan", "ort-directml"] }

[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "=0.3.8", features = ["whisper-cpp", "whisper-metal", "onnx", "ort-coreml"] }
accessibility-sys =  "0.1.3"
core-foundation-sys =  "0.8.7"

[target.'cfg(target_os = "linux")'.dependencies]
transcribe-rs = { version = "=0.3.8", features = ["whisper-cpp", "whisper-vulkan", "onnx"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
# `deep-link` feature lets the running instance receive OAuth callback URLs on
# Linux/Windows, where the second launch forwards them through single-instance.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
# The following optimizations are disabled due to CoreAudio FFI crashes on macOS.
# These aggressive optimizations can cause segmentation faults when CPAL interfaces
# with CoreAudio, resulting in null pointer dereferences in HALDeviceList::GetData.
# 
# We may re-enable these in the future when:
# - CPAL fixes the underlying FFI safety issues
# - Rust's optimization passes better handle FFI boundaries
# - We implement our own audio backend that doesn't rely on CPAL
#
# For more information on Tauri app size optimization, see:
# https://v2.tauri.app/concept/size/
#
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
